--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "ethers": "^5.7.2",
     "fs": "^0.0.1-security",
     "jito-ts": "^3.0.1",
+    "jsconvict": "^0.1.1",
     "os": "^0.1.2",
     "path": "^0.12.7",
     "pino": "^8.18.0",
